# cookbook.io

./: .gitignore  package-lock.json
client/: package-lock.json  package.json  svelte.config.js
client/src/: app.css
client/src/components/: Combobox.svelte  ErrorBox.svelte  ErrorBox.ts  HiddenSinglelineInput.svelte  Navbar.svelte  NumberInput.svelte  RecipeDisplay.svelte  SuccessBox.svelte  TextMultilineInput.svelte  TextSinglelineInput.svelte  Title.svelte  UserPreview.svelte
client/src/lib/: api.ts  login.ts  profile.ts
client/src/lib/routes/: error.ts  recipe.ts  user.ts
client/src/routes/: +layout.svelte  +layout.ts
server/: Cargo.toml  cookbook.postman_collection.json
server/recipes/: 1-f136f967-e83a-4432-a980-5a1cfd7a8231  15-94ef8c6a-e339-4d94-a8b8-3a1af6619893  15-a31b994f-0a72-42f9-adaf-79a8d9fb3e46  15-b996277b-d4f9-4b3f-ac44-c08a43df6f20  15-f0d27fc4-7f14-46c3-8dba-204605bfb7c6  3-b52e5488-b17b-4f91-b1cc-b9e32eb1cfd6
server/sql/: migration.sql
server/src/: helpers.rs  main.rs
server/src/auth/: helpers.rs
server/src/database/: models.rs
server/src/database/models/: ingredients.rs  mod.rs  profile_picture.rs  recipe.rs  recipe_thumbnails.rs  recipes.rs  user.rs  user_details.rs
server/src/extractors/auth/: mod.rs
server/src/middleware/auth/: mod.rs
server/src/recipe_io/: mod.rs
server/src/routes/: error.rs  mod.rs
server/src/routes/account/: helpers.rs  services.rs
server/src/routes/recipes/: constants.rs  helpers.rs  mod.rs  services.rs
server/src/routes/users/: helpers.rs  services.rs
server/src/static_files/: helpers.rs
(+24 files in other folders)
