[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
futures = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.117"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "json" ] }
anyhow = "1.0.86"
dotenv = "0.15.0"
regex = "1.10.4"
bcrypt = "0.15.1"
