[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
futures = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.117"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "json", "chrono" ] }
anyhow = "1.0.86"
dotenv = "0.15.0"
regex = "1.10.4"
bcrypt = "0.15.1"
jwt = "0.16.0"
hmac = { version = "0.12.1", features = ["reset"] }
sha2 = "0.10.8"
chrono = { version = "0.4.38", features = ["serde"] }
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-cors = "0.7.0"
